--- a/templates/todo_list/tag_list.html
+++ b/templates/todo_list/tag_list.html
@@ -4,7 +4,7 @@
 {% block content %}
   <h1>
     Tad list
-    <a href="{% url 'todo_list:tag_form' %}" class="btn btn-primary link-to-page">
+    <a href="{% url 'todo_list:tag-create' %}" class="btn btn-primary link-to-page">
       Add tag
     </a>
   </h1>
@@ -21,7 +21,7 @@
         </tr>
       </thead>
 
-      {% for tag in tag_list.all %}
+      {% for tag in tag_list %}
         <tbody>
           <tr>
             <th scope="row">{{ tag.id }}</th>
@@ -29,10 +29,10 @@
               {{ tag.name }}
             </td>
             <td>
-              <a href="{% url 'todo_list:tag_form' %}">Update</a>
+              <a href="{% url 'todo_list:tag-update' tag.id %}">Update</a>
             </td>
             <td>
-              <a href="{% url 'todo_list:tag_confirm_delete' %}">Delete</a>
+              <a href="{% url 'todo_list:tag-delete' tag.id %}">Delete</a>
             </td>
           </tr>
         </tbody>
